hphp/test/zend/good/zend/bug43344_6.php
<?php
namespace Foo;
echo namespace\bar."\n";
?>