hphp/test/zend/bad/ext-standard-directory/directory_constants-win32.php
<?php

echo DIRECTORY_SEPARATOR;

echo "\n";

echo PATH_SEPARATOR;

echo "\n";

echo "done";

?>